solc_mutator_ossfuzz_seed_corpus/test_sol/test_16dae03011103f2e4aa7d6a7f114f3e4f576c20a979612b58fff8bc2fbf06036_630387a6ad42377d40ebff46ab5703451c529ab4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  int160 el0;
  address payable el1;
}
error er0(int56 ep0);
library L0 {
  using L0 for *;
  function f0(St0 memory i0,function (function (function (int160, bool) external  , St0 memory, uint224) external   returns (address[] memory)) external   returns (address payable, bytes11)[] memory i1) internal    returns(int72 o0)
  {
  }
  address payable public constant cons0 = payable(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF);
  function f1(function () external   returns (int80) i0,bool i1,address i2) public    returns(int136 o0,function (bool[2] memory, bool, bool[] memory) external   returns (bool) o1)
  {
  }
  modifier m0() 
  {
    _;
  }
  function f2(function () external   returns (function (bytes memory) internal  , uint232, uint104) i0,string memory i1) public  m0()  returns(bytes12 o0)
  {
    (function (bytes memory) internal   l0, uint232 l1, uint104 l2) = i0();
  }
  using L0 for *;
  modifier m1(uint168 i0) 
  {
    _;
    _;
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:708-743): Internal type cannot be used for external function type.
